# GeneEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Gene.sln  README.md  appveyor.yml  bitbucket-pipelines.yml  deploy.sh  deploy_docs.bat  deploy_docs.sh
Dependencies/FreeType/: CMakeLists.txt  FreeType.vcxproj
Dependencies/FreeType/Output/Binaries/: GFreeType.ilk
Dependencies/FreeType/Output/ObjectFiles/: freetype-gl.idb
Dependencies/FreeType/Output/ObjectFiles/FreeType.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FreeType.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dependencies/FreeType/freetype-gl/: freetype-gl.h  opengl.h  texture-atlas.c  texture-atlas.h  texture-font.c  vector.c
Dependencies/FreeType/include/freetype/config/: ftheader.h
Dependencies/FreeType/src/autofit/: autofit.c
Dependencies/FreeType/src/freetype-gl/: font-manager.c  opengl.h  platform.h  texture-font.c
Examples/Pong/: .gitignore  CMakeLists.txt
Examples/Pong/Source/: Main.cc
Gene/: CMakeLists.txt  Gene.vcxproj
Gene.GML/: CMakeLists.txt  Gene.GML.vcxproj
Gene.GML/Private/: Interpreter.cc  Parser.cc
Gene.GML/Public/Gene/GML/: AbstractSyntaxTree.hpp  Interpreter.hpp  Parser.hpp  Token.hpp  TokenTypes.hpp  abstractsyntaxtree.hpp
Gene.Sandbox/: CMakeLists.txt  Gene.Sandbox.vcxproj
Gene.Sandbox/Data/: doughnut.mtl  fragment.glsl  fragment.shader  fragment2d.glsl  fragment2d.shader  vertex.glsl  vertex.shader  vertex2d.glsl  vertex2d.shader
Gene.Sandbox/Data/Fonts/: .gitignore
Gene.Sandbox/Data/Scripts/: test.lua
Gene.Sandbox/Data/Shaders/: Renderer2DFragment.shader  Renderer2DVertex.shader  Renderer3DFragment.shader  Renderer3DVertex.shader
Gene.Sandbox/Source/: .Main.cc.swp  Main.c  Main.cc
Gene/Engine/Private/: All.Reflection.cc  CMakeLists.txt
Gene/Engine/Private/Audio/: AudioSystem.cc  WaveFile.cc
Gene/Engine/Private/Content/: GeneModel.cc  OBJModel.cc  OBJModelLoader.cc
Gene/Engine/Private/Core/: Random.cc
Gene/Engine/Private/Debug/: Logger.cc
Gene/Engine/Private/Graphics/: .GLSLShader.cc.swp  Buffer.cc  Color.cc  Font.cc  FreeTypeFont.cc  FreeTypeFont.h  FreetypeGL.h  GLSLShader.cc  Light.cc  ParticleRenderer.cc  PreBuiltVertices.cc  Renderer2D.cc  Spritesheet.cc  Texture2D.cc  VertexArray.cc
Gene/Engine/Private/Graphics/Factorys/: ShaderFactory.cc  ShaderFactory.cpp
Gene/Engine/Private/Graphics/GUI/: TextBox.cc
Gene/Engine/Private/Graphics/Shaders/: Fragment2D.shader  Vertex2D.shader
Gene/Engine/Private/IO/: File.cc
Gene/Engine/Private/Input/: InputController.cc  Keyboard.cc  Mouse.cc
Gene/Engine/Private/Math/: Maths.Reflection.cc  Matrix4.cc  Quaternion.cc  Vector2.cc  Vector3.cc
Gene/Engine/Private/Platform/: GLFLLoad.cc  GLFLLoad.h  Time.cc  Window.cc
Gene/Engine/Private/Platform/Android/: AInput.cc  ATime.cc  AWindow.cc  AWindow.h
Gene/Engine/Private/Platform/Linux/: .X11Window.cc.swp  X11Input.cc  X11Time.cc  X11Window.cc  X11Window.h
Gene/Engine/Private/Platform/Win32/: Win32Input.cc  Win32Time.cc  Win32Window.cc  Win32Window.h  wglext.h
Gene/Engine/Private/Runtime/: Application.cc  Reflection.cc  Resources.cc
Gene/Engine/Private/Scripting/: MonoEnviroment.cc  MonoScript.cc
Gene/Engine/Public/: All.Reflection.inl  CMakeLists.txt  GeneCommon.h  GeneUseAll.h
Gene/Engine/Public/Audio/: AudioSystem.h  WaveFile.h
Gene/Engine/Public/Content/: GeneModel.h  IModelLoader.h  OBJModel.h  OBJModelLoader.h  TinyObjLoader.h
Gene/Engine/Public/Core/: Array.h  Random.h  String.h
Gene/Engine/Public/Debug/: Logger.h
Gene/Engine/Public/Graphics/: Buffer.h  Color.h  Font.h  GLSLShader.h  ImGui.h  Light.h  Particle.h  ParticleRenderer.h  PreBuiltVertices.h  Renderable2D.h  Renderer2D.h  Spritesheet.h  Texture2D.h  VertexArray.h
Gene/Engine/Public/Graphics/Factorys/: ShaderFactory.h
Gene/Engine/Public/Graphics/GUI/: TextBox.h  Widget.h
Gene/Engine/Public/IO/: File.h
Gene/Engine/Public/Input/: InputController.h  Keyboard.h  KeyboardState.h  Keys.h  Mouse.h  MouseState.h
Gene/Engine/Public/Loaders/: OBJLoader.h
Gene/Engine/Public/Math/: Functions.h  Math.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h
Gene/Engine/Public/Platform/: FreeType.h  GLContext.h  Mono.h  OS.h  OpenAL.h  OpenGL.h  Time.h  Window.h
Gene/Engine/Public/Platform/Input/: AndroidKeys.h  LinuxKeys.h  Win32Keys.h
Gene/Engine/Public/Runtime/: Application.h  ECS.h  Reflection.h  Resources.h
Gene/Engine/Public/Scripting/: LuaJIT.h  MonoEnviroment.h  MonoScript.h
Gene/Tests/Gene.UnitTests/: CMakeLists.txt  CatchMain.cc  Gene.UnitTests.vcxproj
Gene/Tests/Gene.UnitTests/Tests/: CatchMain.cc
Gene/Tests/Gene.UnitTests/Tests/Content/: TestObjLoader.cc
Gene/Tests/Gene.UnitTests/Tests/Graphics/: TestColor.cc
Gene/Tests/Gene.UnitTests/Tests/Math/: TestMathFunctions.cc  TestMatrix4.cc  TestVector2.cc  TestVector3.cc
Gene/libroid/: CMakeLists.txt
Gene/libroid/include/libroid/: Activity.h  JavaEnvironment.h  JavaObject.h  View.h  Window.h  libroid.h
Gene/libroid/source/: Activity.cc  JavaObject.cc  View.cc  Window.cc
Gene2/: CMakeLists.txt
Gene2.Sandbox/: CMakeLists.txt  Main.cpp
Gene2.Sandbox/Assets/: Test.shader
Gene2/Documentation/: Doxyfile
Gene2/Engine/Include/Gene2/: CMakeLists.txt
Gene2/Engine/Include/Gene2/Debug/: Assert.hpp  CMakeLists.txt  Logging.hpp
Gene2/Engine/Include/Gene2/Graphics/: Buffer.hpp  CMakeLists.txt  Color.hpp  ForwardRenderer3D.hpp  (+9 more)
Gene2/Engine/Source/: CMakeLists.txt
Gene2/Engine/Source/Debug/: CMakeLists.txt  Logging.cpp
Gene2/Engine/Source/Graphics/: Buffer.cpp  CMakeLists.txt  Color.cpp  ForwardRenderer3D.cpp  GraphicsResourceAllocator.cpp  IOpenGL3Context.cpp  InputLayout.cpp  RenderDevice.cpp  Shader.cpp  Texture.cpp
Gene2/Engine/Source/Input/: CMakeLists.txt
Gene2/Engine/Source/Platform/: CMakeLists.txt  IWindow.cpp  Intrinsics.cpp
Gene2/Engine/Source/Scene/: CMakeLists.txt
Gene2/Tests/UnitTests/: CMakeLists.txt  Main.cpp  Test_GraphicsResourceAllocator.cpp  Test_String.cpp
Gene2/Tools/CMake/: Common.cmake  Dep.In.hpp
(+148 files in other folders)
